--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,14 +9,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
       - uses: actions/checkout@v3
-      - name: Build & push Docker image
+        name: Check out code
+
       - uses: mr-smithers-excellent/docker-build-push@v6
+        name: Build & push Docker image
         with:
-          image: aboubacar/webapp
+          image: repo/image
           tags: v1, latest
           registry: docker.io
           dockerfile: Dockerfile
-          username: {{ secrets.DOCKER_USERNAME }}
-          password: {{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
