--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: mr-smithers-excellent/docker-build-push@v6
         name: Build & push Docker image
         with:
-          image: aboubacar/image
+          image: aboubacar/webapp
           tags: v1, latest
           registry: docker.io
           dockerfile: Dockerfile
