--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -12,14 +12,14 @@ jobs:
       - uses: actions/checkout@v3
         name: Check out code
 
-      - name: Set Build Number
+      - name: Set Build number
         id: build-number
         run: echo "BUILD_NUMBER=$(date '+%d.%m.%Y.%H.%M.%S')" >> $GITHUB_OUTPUT
       - uses: mr-smithers-excellent/docker-build-push@v6
         name: Build & push Docker image
         with:
           image: aboubacar/webapp
-          tags: ${{ steps.build-number.outputs.BUILD_NUMBER}}, latest
+          tags: ${{steps.build-number.outputs.BUILD_NUMBER}}
           registry: docker.io
           dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
