--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,6 +22,6 @@ jobs:
           image: aboubacar/webapp
           tags: latest, ${{steps.build-number.outputs.BUILD_NUMBER}}
           registry: docker.io
-          dockerfile: Dockerfile
+#          dockerfile: Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
